add sensor test code

--- a/Android/handdryer-app/src/main/res/values/strings.xml
+++ b/Android/handdryer-app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Hand Dryer</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="not_supported_device">Sorry. This Device is not supported.</string>
 
 </resources>
